新增單項目商品頁＋css (1.需要修改內容樣式2.編輯整理出layout3.構思ＪＳ頁面切解)

--- a/commodityPage.html
+++ b/commodityPage.html
@@ -69,7 +69,7 @@
                     <li><p>產品介紹內文產品介紹內文產品介紹內文</p></li>
                     
                     <li class="purchasingSubtitle">研磨方式</li>
-                    <li>
+                    <li class="selectGrindNav">
                         <select name="" id="" class="selectGrind">
                         <option value>選取研磨方式</option>
                         <option value="" >不研磨</option>
@@ -77,15 +77,18 @@
                         <option value="" >義式手沖壺</option>
                     </select>
                     </li>
+
                     <li class="purchasingSubtitle">購買數量</li>
                     
                     <li class="selectPurchasingNum" >
                         <div class="purchasingNum">
-                        <a href="">-</a>
-                        <input type="number" name="" id="" value="1" class="purchasingNumValue">
-                        <a href="">+</a>
-                    </div>
-                    <a href="" class="carBtn">加入購物車</a>
+                        <a href="" class="selectValueAddSub">-</a>
+                        <input type="number" name="" id="" value="1" class="purchasingValue">
+                        <a href="" class="selectValueAddSub">+</a>
+                        </div>
+
+                        <a href="" class="carBtn">加入購物車</a>
+
                     </li>
 
 
@@ -101,8 +104,7 @@
 
 
             <div class="purchasingText">
-
-                <p class="solid"></p>
+                <hr class="solid">
                 <span>描述</span>
                 <p>*度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
                 <p>*青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成。</p>
