完成首頁與商品頁 待處理購買數量的css與左方商品nva

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- 首頁內容 -->
     <!-- 首頁＿圖  -->
-    <div class="indexBanner">
+    <div class="indexBanner setInFrame">
         <div class="indexBannerContent">
             <h2>
                 <span>Choose your own</span>
@@ -37,7 +37,7 @@
         
     </div>
 
-    <div class="aboutBrand">
+    <div class="aboutBrand setInFrame">
 
         <div class="brandLogo">
             <span>Welcome to </span>
