商品頁搜尋頁

--- a/commodityPage.html
+++ b/commodityPage.html
@@ -28,9 +28,12 @@
             
             <ul class="selectCommodity">
                 <li><a href="">期間限定</a></li>
+                <hr class="solid">
                 <li><a href="">特惠組合</a></li>
+                <hr class="solid">
                 <li>
                     <a href="">亞洲商品</a>
+                    <hr class="solid">
                     <ul class="commodityArea">
                         <li><a href="">台灣阿里山</a></li>
                         <li><a href="">台灣古坑</a></li>
@@ -39,6 +42,7 @@
                 </li>
                 <li>
                     <a href="">中南美洲商品</a>
+                    <hr class="solid">
                     <ul class="commodityArea hide">
                         <li>巴西 雅買加 藍山咖啡</li>
                         <li>巴西 哥倫比亞 薩拉尼亞</li>
@@ -47,10 +51,11 @@
                 </li>
                 <li>
                     <a href="">非洲商品</a>
+                    <hr class="solid">
                     <ul class="commodityArea hide">
-                        <l1>衣索比雅 耶加雪菲</l1>
-                        <l1>夏威夷 瓜地馬拉</l1>
-                        <l1>夏威夷 科納咖啡</l1>
+                        <li>衣索比雅 耶加雪菲</li>
+                        <li>夏威夷 瓜地馬拉</li>
+                        <li>夏威夷 科納咖啡</li>
                     </ul>
                 </li>
             </ul>
