除了會員 其他樣式ok

--- a/commodityPage.html
+++ b/commodityPage.html
@@ -33,14 +33,19 @@
 
     <!-- 商品選單欄位 開始 -->
     <div class="commodityContent">
+        
         <div class="commodityNav">
             <h2>商品分類</h2>
             
             <ul class="selectCommodity">
-                <li><a href="">期間限定</a></li>
+                <li><a href="">期間限定</a>
                 <hr class="solid">
-                <li><a href="">特惠組合</a></li>
+                </li>
+
+                <li><a href="">特惠組合</a>
                 <hr class="solid">
+                </li>
+
                 <li>
                     <a href="">亞洲商品</a>
                     <hr class="solid">
@@ -78,7 +83,9 @@
         <!-- 商品介紹 開始 -->
         <div class="purchasing">
             <div class="purchasingNav">
-                <img src="/img/素材/tea-garden-1396463_1280.jpg" alt="">
+                <div class="productImg">
+                    <img src="/img/素材/tea-garden-1396463_1280.jpg" alt="">
+                </div>
                 <ul>
                     <li><h1>古坑 日曬 比里咖啡莊園</h1></li>
                     <li><p>產品介紹內文產品介紹內文產品介紹內文</p></li>
