--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vacationAroma</title>
-    <link rel="stylesheet" href="./css/all.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="./css/indexAll.css">
 
 </head>
 <body>
@@ -17,7 +18,7 @@
                 <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
             </h1>
     
-            <ul>
+            <ul class="loginMember">
                 <li><a href="/login.html">會員登入</a></li>
                 <li><a href="/sp1Cart.html">購物車</a></li>
                 <li><a href="">風味搜尋</a></li>
@@ -40,12 +41,15 @@
                 <span>Choose your own</span>
                 <span>vacation aroma</span>
             </h2>
-            <div class="goCommodityPage">挑選豆子</div>
+            <div class="goCommodityPage">
+                <a href="/search.html">挑選豆子</a>
+            </div>
         </div>
 
     </div>
 
-    <div class="setInFrame aboutBrand">
+
+    <div class="aboutBrand">
 
         <div class="brandLogo">
             <span>Welcome to </span>
@@ -134,6 +138,8 @@
     </div>
     <!-- 尾 店家資訊 結束 -->
     
-
+    <!-- 載入ＪＳ -->
+    <!-- 判斷登入 -->
+    <script src="/js/loginMember.js"></script>
 </body>
 </html>
