--- a/sp1Cart.html
+++ b/sp1Cart.html
@@ -19,7 +19,7 @@
                 <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
             </h1>
     
-            <ul>
+            <ul class="loginMember">
                 <li><a href="/login.html">會員登入</a></li>
                 <li><a href="/sp1Cart.html">購物車</a></li>
                 <li><a href="">風味搜尋</a></li>
@@ -115,7 +115,10 @@
     </div>
     <!-- 尾 店家資訊 結束 -->
 
+    <!-- 載入ＪＳ -->
     <script src="/js/sp1Cart.js"></script>
+    <!-- 判斷登入 -->
+    <script src="/js/loginMember.js"></script>
     
 </body>
 </html>
