--- a/sp2Pay.html
+++ b/sp2Pay.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shoppingPay</title>
     <link rel="stylesheet" href="./css/all.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
 
@@ -18,7 +20,7 @@
                     <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
                 </h1>
         
-                <ul>
+                <ul class="loginMember">
                     <li><a href="/login.html">會員登入</a></li>
                     <li><a href="/sp1Cart.html">購物車</a></li>
                     <li><a href="">風味搜尋</a></li>
@@ -83,6 +85,9 @@
     <!-- 尾 店家資訊 結束 -->
     
 
+    <!-- 載入ＪＳ -->
     <script src="/js/sp2Pay.js"></script>
+    <!-- 判斷登入 -->
+    <script src="/js/loginMember.js"></script>
 </body>
 </html>
