--- a/sp3delivery.html
+++ b/sp3delivery.html
@@ -18,7 +18,7 @@
                     <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
                 </h1>
         
-                <ul>
+                <ul class="loginMember">
                     <li><a href="/login.html">會員登入</a></li>
                     <li><a href="/sp1Cart.html">購物車</a></li>
                     <li><a href="">風味搜尋</a></li>
@@ -105,12 +105,12 @@
     </div>
     <!-- 尾 店家資訊 結束 -->
 
-    <!-- 集中管理API -->
-    <!-- <script src="config.js"></script>
-    <script>
-        const url = "http://www.rocket"
-    </script> -->
+
+
+    <!-- 載入ＪＳ -->
     <script src="/js/sp3delivery.js"></script>
+    <!-- 判斷登入 -->
+    <script src="/js/loginMember.js"></script>
     
 </body>
 </html>
