寫到購物流程1

--- a/index.html
+++ b/index.html
@@ -119,13 +119,10 @@
     <!-- 尾 店家資訊 -->
     <div class="footer">
         <ul class="brandVA setInFrame">
-            <li>
-                <span class="vaIGBtn"></span>
-                <span class="vaFBBtn"></span>
-                <span class="vaLineBtn"></span>
-                <a href="" ></a>
-                <a href=""></a>
-                <a href=""></a>
+            <li class="footerIconBtn" >
+                <a href="#" class="social"></a>
+                <a href="#" class="social"></a>
+                <a href="#" class="social"></a>
             </li>
             <li>假期風味</li>
             <li>聯絡電話 07-5169-123</li>
@@ -139,6 +136,7 @@
     <!-- 尾 店家資訊 結束 -->
     
     <!-- 載入ＪＳ -->
+    <script src="/js/API.js"></script>
     <!-- 判斷登入 -->
     <script src="/js/loginMember.js"></script>
 </body>
