購物流程寫完

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <div class="commodityTitle">
         <h3><img src="/img/products.png" alt=""></h3>
 
-        <ul class="commodity">
-            <li>
+        <ul class="commodity" id="commodityTitleId">
+            <li class="commodityLiList">
                 <img src="/img/素材/coffee-1576256_1280.jpg" alt="#">
                 <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
                 <span class="commodityPrice">NT.1490</span>
@@ -137,6 +137,7 @@
     
     <!-- 載入ＪＳ -->
     <script src="/js/API.js"></script>
+    <script src="/js/index.js"></script>
     <!-- 判斷登入 -->
     <script src="/js/loginMember.js"></script>
 </body>
