雅芳協力line登入

--- a/sp4LineDeliveryCheck.html
+++ b/sp4LineDeliveryCheck.html
@@ -64,8 +64,9 @@
                         <span>高雄</span>
                         <hr class="solid">
                     </li>
-                    <li class="stepBtn" id="stepBtnSDId">
-                        <div class="nextBtn previousBtn">確認資料 回首頁</div>
+                    <li class="stepBtn">
+                        <!-- <div class="nextBtn">上一步 修改資料</div> -->
+                        <div class="nextBtn previousBtn">確認訂購人資料 前往付款</div>
                     </li>
                 </ul>
 
@@ -101,7 +102,6 @@
     <!-- 判斷登入 -->
     <script src="/js/loginMember.js"></script>
     <script src="/js/sp4StoreDeliveryCheck.js"></script>
-    <!-- <script src="/js/sp4StoreDeliveryCheck.js"></script> -->
     
 </body>
 </html>
