修改結帳完成頁面

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <!-- 商品區 -->
-    <div class="commodityTitle">
+    <div class="commodityTitle setInFrame">
         <h3><img src="/img/products.png" alt=""></h3>
 
         <ul class="commodity" id="commodityTitleId">
