--- a/login.html
+++ b/login.html
@@ -86,9 +86,9 @@
         
     </div>
     <!-- 尾 店家資訊 結束 -->
-
+    <script src="/js/API.js"></script>
     <!-- 載入ＪＳ -->
-    <script src="/js/loginMember.js"></script>
+    <!-- <script src="/js/loginMember.js"></script> -->
     <!-- 判斷登入 -->
     <script src="js/login.js"></script>
 
