--- a/sp5Cart.html
+++ b/sp5Cart.html
@@ -32,21 +32,10 @@
 
 <!-- 商品區 需調整 -->
     <div class="cartContent setInFrame">
-
-        <ul class="cartBar">
-            <li class="">確認購物車</li>
-            <li class="nextIcon">></li>
-
-            <li class="cancel">付款方式</li>
-            <li class="nextIcon cancel">></li>
-
-            <li class="cancel">資料填寫</li>
-            <li class="nextIcon cancel">></li>
-
-            <li class="cancel">確認收件資料</li>
-
-        </ul>
-
+        
+        <h2 class="cartSp5">
+            <span>訂購完成</span>
+        </h2>
 
         <table class="cartList">
             <tr>
