修改物件推的結果

--- a/commodityPage.html
+++ b/commodityPage.html
@@ -33,7 +33,7 @@
     <!-- 上方選單結束 -->
 
     <!-- 商品選單欄位 開始 -->
-    <div class="commodityContent setInFrame setInFrameTB">
+    <div class="commodityContent setInFrame commodityCenter">
         
         <div class="commodityNav">
             <h2>商品分類</h2>
@@ -177,5 +177,6 @@
     <script src="/js/loginMember.js"></script>
     <!-- 商品渲染 -->
     <script src="/js/commodityPage.js"></script>
+    <script src="/js/searchContent.js"></script>
 </body>
 </html>
