--- a/memberPage.html
+++ b/memberPage.html
@@ -53,7 +53,12 @@
                         <span>手機</span>
                         <span>0912345678</span>
                     </li>
+
                 </ul>
+
+                <div class="nextBtn" id="signOutBtnId">
+                    <span>會員登出</span>
+                </div>
             
             
             </div>
