--- a/Xsp5Cart.html
+++ b/Xsp5Cart.html
@@ -80,7 +80,7 @@
 
             <td colspan="4" align="right" class="tdNotSolid">      
                 <div class="nextBtn" id="nextBtnId">
-                    <span>下一步</span>
+                    <span>回首頁</span>
                 </div>
             </td>
 
@@ -115,7 +115,7 @@
 
     <!-- 判斷登入 -->
     <script src="/js/loginMember.js"></script>
-    <script src="/js/sp1Cart.js"></script>
+    <script src="/js/sp5Cart.js"></script>
     
 </body>
 </html>
