修改ＪＳ產品頁 用ＪＱ

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="loginMember">
                 <li><a href="/login.html">會員登入</a></li>
                 <li><a href="/sp1Cart.html">購物車</a></li>
-                <li><a href="">風味搜尋</a></li>
+
             </ul>  
     
         </div>
@@ -42,7 +42,7 @@
                 <span>vacation aroma</span>
             </h2>
             <div class="goCommodityPage">
-                <a href="/search.html">挑選豆子</a>
+                <a href="/searchAF.html">挑選豆子</a>
             </div>
         </div>
 
@@ -120,9 +120,9 @@
     <div class="footer">
         <ul class="brandVA setInFrame">
             <li class="footerIconBtn" >
-                <a href="#" class="social"></a>
-                <a href="#" class="social"></a>
-                <a href="#" class="social"></a>
+                <a href="#" class="social IGBtn"></a>
+                <a href="#" class="social FBBtn"></a>
+                <a href="#" class="social LineBtn"></a>
             </li>
             <li>假期風味</li>
             <li>聯絡電話 07-5169-123</li>
