--- a/memberPage.html
+++ b/memberPage.html
@@ -24,7 +24,7 @@
             <ul class="loginMember">
                 <li><a href="/login.html">會員登入</a></li>
                 <li><a href="/sp1Cart.html">購物車</a></li>
-                <li><a href="">風味搜尋</a></li>
+
             </ul>  
     
         </div>
@@ -90,8 +90,8 @@
                 </tbody>
 
                 <footer>
-                    <td colspan="15" align="right" class="tdNotSolid">      
-                        <div class="nextBtn" id="nextBtnId">
+                    <td colspan="15" align="right" id="nextIndexBtnId" class="tdNotSolid">      
+                        <div class="nextBtn" >
                             <span>回首頁</span>
                         </div>
                     </td>
@@ -110,13 +110,10 @@
     <!-- 尾 店家資訊 -->
     <div class="footer">
         <ul class="brandVA setInFrame">
-            <li>
-                <span class="vaIGBtn"></span>
-                <span class="vaFBBtn"></span>
-                <span class="vaLineBtn"></span>
-                <a href="" ></a>
-                <a href=""></a>
-                <a href=""></a>
+            <li class="footerIconBtn" >
+                <a href="#" class="social IGBtn"></a>
+                <a href="#" class="social FBBtn"></a>
+                <a href="#" class="social LineBtn"></a>
             </li>
             <li>假期風味</li>
             <li>聯絡電話 07-5169-123</li>
