--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
             <ul class="loginMember">
                 <li><a href="/login.html">會員登入</a></li>
                 <li><a href="/sp1Cart.html">購物車</a></li>
-                <li><a href="">風味搜尋</a></li>
+                <li>風味搜尋</a></li>
             </ul>  
     
         </div>
@@ -37,25 +37,18 @@
         <div class="commodityNav">
             <h2>商品分類</h2>
             
-            <ul class="selectCommodity">
-                <li><a href="">期間限定</a>
-                <hr class="solid">
-                </li>
+            <ul class="selectCommodity" id="scID">
 
-                <li><a href="">特惠組合</a>
-                <hr class="solid">
-                </li>
-
-                <li>
+                <li id="taiwanAreaId">
                     <span id="productTaiwan">台灣商品</span>
                     <hr class="solid">
                     <ul class="commodityArea">
-                        <li><a href="">台灣阿里山</a></li>
-                        <li><a href="">台灣古坑</a></li>
-                        <li><a href="">台南東山</a></li>
+                        <li>台灣阿里山</li>
+                        <li>台灣古坑</li>
+                        <li>台南東山</li>
                     </ul>
                 </li>
-                <li>
+                <li id="southAmericaId">
                     <span id="productSouthAmerica">中南美洲商品</span>
                     <hr class="solid">
                     <ul class="hide">
@@ -64,14 +57,12 @@
                         <li>印尼 蘇門答臘 曼特寧</li>
                     </ul>
                 </li>
-                <li >
-                    <!-- <a href="" ></a> -->
+                <li id="africaId">
+                    <!-- <a href="" > -->
                     <span id="productAfrica">非洲商品</span>
                     <hr class="solid">
                     <ul class="hide">
                         <li>衣索比雅 耶加雪菲</li>
-                        <li>夏威夷 瓜地馬拉</li>
-                        <li>夏威夷 科納咖啡</li>
                     </ul>
                 </li>
             </ul>
@@ -119,13 +110,10 @@
   <!-- 尾 店家資訊 -->
   <div class="footer">
     <ul class="brandVA setInFrame">
-        <li>
-            <span class="vaIGBtn"></span>
-            <span class="vaFBBtn"></span>
-            <span class="vaLineBtn"></span>
-            <a href="" ></a>
-            <a href=""></a>
-            <a href=""></a>
+        <li class="footerIconBtn" >
+            <a href="#" class="social IGBtn"></a>
+            <a href="#" class="social FBBtn"></a>
+            <a href="#" class="social LineBtn"></a>
         </li>
         <li>假期風味</li>
         <li>聯絡電話 07-5169-123</li>
