--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
 
             <li class="promptBtn">
                 <span>尚未有帳號？</span>
-                <span>忘記密碼？</span>
+                <!-- <span>忘記密碼？</span> -->
             </li>
             
         </ul>
