第一次推遠端

--- a/login.html
+++ b/login.html
@@ -50,14 +50,14 @@
                 <hr class="solid">
             </li>
 
-            <li class="promptBtn">
+            <li class="promptBtn" id="signUpBtnId">
                 <span>尚未有帳號？</span>
                 <!-- <span>忘記密碼？</span> -->
             </li>
             
         </ul>
         <div class="loginBtn">登入</div>
-        <div class="loginBtn lineLogin" id="lineLoginASD">LINE登入</div>
+        <div class="loginBtn lineLogin" id="lineLoginASD">LINE直接登入</div>
     </div>
 
 
