--- a/searchAF.html
+++ b/searchAF.html
@@ -68,7 +68,7 @@
                 </li> -->
 
                 <li>
-                    <span class="caret">台灣商品</span>
+                    <span class="caret" id="index1">台灣商品</span>
                     <hr class="solid">
                     <ul class="commodityArea">
                         <li data-value="3001">台灣阿里山</a></li>
@@ -77,7 +77,7 @@
                     </ul>
                 </li>
                 <li>
-                    <span class="caret">中南美洲商品</span>
+                    <span class="caret" id="searchIdAs">中南美洲商品</span>
                     <hr class="solid">
                     <ul class="commodityArea">
                         <li data-value="4001">巴拿馬</li>
@@ -87,7 +87,7 @@
                 </li>
                 <li>
                     <!-- <a href="" ></a> -->
-                    <span class="caret">非洲商品</span>
+                    <span class="caret" id="searchIdArea">非洲商品</span>
                     <hr class="solid">
                     <ul class="commodityArea">
                         <li data-value="5001">衣索比亞</li>
@@ -119,7 +119,7 @@
                 </li>
             </ul>
             <div class="commodityTitle">
-                <ul class="commodity" id="commodityArea">
+                <ul class="commodity commodityFlex" id="commodityArea">
                     <!-- 試寫innerHtml -->
                     <!-- <li class="commodityPack">
                         <img src="/img/素材/coffee-1576256_1280.jpg" class="commodityImg" alt="#">
@@ -139,7 +139,7 @@
 
     <!-- 尾 店家資訊 -->
     <div class="footer">
-        <ul class="brandVA">
+        <ul class="brandVA setInFrame">
             <li class="footerIconBtn" >
                 <a href="#" class="social IGBtn"></a>
                 <a href="#" class="social FBBtn"></a>
@@ -150,9 +150,11 @@
             <li>門市地址 高雄市鹽埕區假期一路3F</li>
 
         </ul>
-        <div class="mapkit"></div>
+        <div class="mapkit">
+        </div>
+        
     </div>
-    <ul id="cc">
+
         <!-- 尾 店家資訊 結束 -->
 
 
