--- a/commodityPage.html
+++ b/commodityPage.html
@@ -34,7 +34,7 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                <a href="./index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
     
             <ul class="loginMember">
@@ -188,13 +188,13 @@
 
     <!-- 載入ＪＳ -->
     <!-- 載入ＡＰＩ -->
-    <script src="/js/API.js"></script>
+    <script src="./js/API.js"></script>
     <!-- 判斷登入 -->
-    <script src="/js/loginMember.js"></script>
+    <script src="./js/loginMember.js"></script>
     <!-- 商品渲染 -->    
 
-    <script src="/js/commodityPage.js"></script>
-    <script src="/js/aaaaa.js"></script>
+    <script src="./js/commodityPage.js"></script>
+    <script src="./js/aaaaa.js"></script>
 
 </body>
 </html>
