--- a/searchAF.html
+++ b/searchAF.html
@@ -37,7 +37,7 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
 
             <ul class="loginMember">
@@ -160,12 +160,12 @@
 
         <!-- 載入ＪＳ& API -->
 
-        <script src="/js/API.js"></script>
+        <script src="./js/API.js"></script>
         <!-- 判斷登入 -->
-        <script src="/js/loginMember.js"></script>
+        <script src="./js/loginMember.js"></script>
         <!-- 產品選單 -->
         <!-- <script src="/js/searchContent.js"></script> -->
-        <script src="/js/searchAF.js"></script>
+        <script src="./js/searchAF.js"></script>
 
 
 
