--- a/Xsp5Cart.html
+++ b/Xsp5Cart.html
@@ -16,7 +16,7 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
     
             <ul class="loginMember">
@@ -89,11 +89,11 @@
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="/js/API.js"></script>
+    <script src="./js/API.js"></script>
 
     <!-- 判斷登入 -->
-    <script src="/js/loginMember.js"></script>
-    <script src="/js/sp5Cart.js"></script>
+    <script src="./js/loginMember.js"></script>
+    <script src="./js/sp5Cart.js"></script>
     
 </body>
 </html>
