--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
     
             <ul class="loginMember">
@@ -83,11 +83,11 @@
         
     </div>
     <!-- 尾 店家資訊 結束 -->
-    <script src="/js/API.js"></script>
+    <script src="./js/API.js"></script>
     <!-- 載入ＪＳ -->
     <!-- <script src="/js/loginMember.js"></script> -->
     <!-- 判斷登入 -->
-    <script src="js/login.js"></script>
+    <script src="./js/login.js"></script>
 
 
 </body>
