--- a/registerSuccess.html
+++ b/registerSuccess.html
@@ -17,7 +17,7 @@
 
             <div class="setInFrame dpSpaceBetween">
                 <h1 class="vacationAromaLogo">
-                    <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                    <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
                 </h1>
         
                 <ul class="loginMember">
@@ -63,7 +63,7 @@
 
         <!-- 載入ＪＳ -->
         <!-- 判斷登入 -->
-        <script src="/js/loginMember.js"></script>
+        <script src="./js/loginMember.js"></script>
     
 </body>
 </html>
