--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
     
             <ul class="loginMember">
@@ -74,7 +74,7 @@
         <!-- 商品介紹 開始 -->
         <div class="searchContent">
             <div class="commodityBanner">
-                <img src="/img/素材/african-3385074.jpg" alt="">
+                <img src="./img/素材/african-3385074.jpg" alt="">
             </div>
             <ul class="searchSort">
                 <li class="sortBtn">
@@ -87,11 +87,11 @@
             <div class="commodityTitle">
                 <ul class="commodity" id="commodityArea">
                     <!-- 試寫innerHtml -->
-                    <li class="commodityPack">
+                    <!-- <li class="commodityPack">
                         <img src="/img/素材/coffee-1576256_1280.jpg" class="commodityImg" alt="#">
                         <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
                         <span class="commodityPrice">NT.1490</span>
-                    </li>
+                    </li> -->
                     <!-- 試寫innerHtml -->
                     
                 </ul>
