--- a/signUp.html
+++ b/signUp.html
@@ -16,7 +16,7 @@
 
             <div class="setInFrame dpSpaceBetween">
                 <h1 class="vacationAromaLogo">
-                    <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                    <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
                 </h1>
         
                 <ul class="loginMember">
@@ -89,9 +89,9 @@
 
         <!-- 載入ＪＳ -->
 
-        <script src="/js/API.js"></script>
-        <script src="/js/signUp.js"></script>
+        <script src="./js/API.js"></script>
+        <script src="./js/signUp.js"></script>
         <!-- 判斷登入 -->
-        <script src="/js/loginMember.js"></script>
+        <script src="./js/loginMember.js"></script>
 </body>
 </html>
