--- a/sp1Cart.html
+++ b/sp1Cart.html
@@ -16,7 +16,7 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
     
             <ul class="loginMember">
@@ -61,7 +61,7 @@
             <tr>
                 <td>
                     <div class="productImg" >
-                        <img src="/img/素材/20170502171200.jpg"  alt="">
+                        <img src="./img/素材/20170502171200.jpg"  alt="">
                     </div>
                 </td>
 
@@ -123,12 +123,11 @@
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="/js/API.js"></script>
+    <script src="./js/API.js"></script>
 
     <!-- 判斷登入 -->
-    <script src="/js/loginMember.js"></script>
-    <!-- <script src="/js/commodityPage.js"></script> -->
-    <script src="/js/sp1Cart.js"></script>
+    <script src="./js/loginMember.js"></script>
+    <script src="./js/sp1Cart.js"></script>
     
 </body>
 </html>
