--- a/sp2Pay.html
+++ b/sp2Pay.html
@@ -17,7 +17,7 @@
 
             <div class="setInFrame dpSpaceBetween">
                 <h1 class="vacationAromaLogo">
-                    <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                    <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
                 </h1>
         
                 <ul class="loginMember">
@@ -83,10 +83,10 @@
     
 
     <!-- 載入ＪＳ -->
-    <script src="/js/API.js"></script>
+    <script src="./js/API.js"></script>
 
     <!-- 判斷登入 -->
-    <script src="/js/loginMember.js"></script>
-    <script src="/js/sp2Pay.js"></script>
+    <script src="./js/loginMember.js"></script>
+    <script src="./js/sp2Pay.js"></script>
 </body>
 </html>
