--- a/sp3LineDelivery.html
+++ b/sp3LineDelivery.html
@@ -15,7 +15,7 @@
 
             <div class="setInFrame dpSpaceBetween">
                 <h1 class="vacationAromaLogo">
-                    <a href="/index.html"><img src="/img/logoB.png" alt=""></a>
+                    <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
                 </h1>
         
                 <ul class="loginMember">
@@ -98,10 +98,10 @@
 
 
     <!-- 載入ＪＳ -->
-    <script src="/js/API.js"></script>
+    <script src="./js/API.js"></script>
 
     <!-- 判斷登入 -->
-    <script src="/js/loginMember.js"></script>
-    <script src="/js/sp3Linedelivery.js"></script>    
+    <script src="./js/loginMember.js"></script>
+    <script src="./js/sp3Linedelivery.js"></script>    
 </body>
 </html>
