--- a/search.html
+++ b/search.html
@@ -129,11 +129,11 @@
 
     <!-- 載入ＪＳ& API -->
 
-    <script src="/js/API.js"></script>
+    <script src="./js/API.js"></script>
     <!-- 判斷登入 -->
-    <script src="/js/loginMember.js"></script>
+    <script src="./js/loginMember.js"></script>
     <!-- 產品選單 -->
-    <script src="/js/searchContent.js"></script>
+    <script src="./js/searchContent.js"></script>
 
 
 </body>
