--- a/searchAF.html
+++ b/searchAF.html
@@ -37,12 +37,12 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="/index.html"><img src="./img/logoB.png" alt=""></a>
+                <a href="./index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
 
             <ul class="loginMember">
-                <li><a href="/login.html">會員登入</a></li>
-                <li><a href="/sp1Cart.html">購物車</a></li>
+                <li><a href="./login.html">會員登入</a></li>
+                <li><a href="./sp1Cart.html">購物車</a></li>
 
             </ul>
 
@@ -102,14 +102,14 @@
         <!-- 商品介紹 開始 -->
         <div class="searchContent">
             <div class="commodityBanner">
-                <img src="/img/素材/african-3385074.jpg" alt="">
+                <img src="./img/素材/african-3385074.jpg" alt="">
             </div>
             <ul class="searchSort">
                 <li class="sortBtn">
                     <!-- API共用 -->
-                    <a class="LowToHeight" style="display:none">價位由低至高</a>
+                    <a class="LowToHeight" style="display:none">價位由高至低</a>
                     <!-- 期間限定專用(JS) -->
-                    <a class="JSLowToHeight" style="display:none">價位由高至低</a>
+                    <a class="JSLowToHeight" style="display:none">價位由低至高</a>
                 </li>
                 <li class="sortBtn">
                     <!-- API共用 -->
@@ -140,7 +140,7 @@
     <!-- 尾 店家資訊 -->
     <div class="footer">
         <ul class="brandVA setInFrame">
-            <li class="footerIconBtn" >
+            <li class="footerIconBtn">
                 <a href="#" class="social IGBtn"></a>
                 <a href="#" class="social FBBtn"></a>
                 <a href="#" class="social LineBtn"></a>
@@ -152,20 +152,20 @@
         </ul>
         <div class="mapkit">
         </div>
-        
+
     </div>
 
-        <!-- 尾 店家資訊 結束 -->
+    <!-- 尾 店家資訊 結束 -->
 
 
-        <!-- 載入ＪＳ& API -->
+    <!-- 載入ＪＳ& API -->
 
-        <script src="./js/API.js"></script>
-        <!-- 判斷登入 -->
-        <script src="./js/loginMember.js"></script>
-        <!-- 產品選單 -->
-        <!-- <script src="/js/searchContent.js"></script> -->
-        <script src="./js/searchAF.js"></script>
+    <script src="./js/API.js?v=050104"></script>
+    <!-- 判斷登入 -->
+    <script src="./js/loginMember.js?v=050104"></script>
+    <!-- 產品選單 -->
+    <!-- <script src="/js/searchContent.js"></script> -->
+    <script src="./js/searchAF.js?v=050104"></script>
 
 
 
