--- a/memberPage.html
+++ b/memberPage.html
@@ -41,8 +41,8 @@
     <div class="memberContent setInFrame">
         <div class="memberNav cartContent">
 
-            <div class="memberPhoto">
-                <img src="./img/products.png" alt="">
+            <div class="memberPhoto" id="userList">
+                <!-- <img src="./img/products.png" alt="">
                 <h2 class="memberName">Sunne</h2>
 
                 <ul class="selectCommodity">
@@ -56,7 +56,7 @@
                         <span>0912345678</span>
                     </li>
 
-                </ul>
+                </ul> -->
             </div>
             <div class="memberInformation">
                 <div class="nextBtn" id="signOutBtnId">
@@ -82,21 +82,21 @@
 
 
             <tbody class="cartContentList" id="userCartList">
-                <th>訂單編號</th>
+                <!-- <th>訂單編號</th>
                 <th>訂購日期</th>
                 <th>金額</th>
                 <th>店取或宅配</th>
                 <th>收件人</th>
                 <th>訂單內容</th>
-            </tbody>
+            </tbody> -->
 
-            <footer>
-                <td colspan="15" align="right" id="nextIndexBtnId" class="tdNotSolid">
-                    <div class="nextBtn">
-                        <span>回首頁</span>
-                    </div>
-                </td>
-            </footer>
+                <footer>
+                    <td colspan="15" align="right" id="nextIndexBtnId" class="tdNotSolid">
+                        <div class="nextBtn">
+                            <span>回首頁</span>
+                        </div>
+                    </td>
+                </footer>
 
 
         </table>
@@ -131,10 +131,10 @@
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050104"></script>
+    <script src="./js/API.js?v=050225"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050104"></script>
-    <script src="./js/memberPage.js?v=050104"></script>
+    <script src="./js/loginMember.js?v=050225"></script>
+    <script src="./js/memberPage.js?v=050227"></script>
 
 </body>
 
