--- a/searchAF.html
+++ b/searchAF.html
@@ -107,7 +107,7 @@
             <ul class="searchSort">
                 <li class="sortBtn">
                     <!-- API共用 -->
-                    <a class="LowToHeight" style="display:none">價位由高至低</a>
+                    <a class="LowToHeight" style="display:none">價位由低至高</a>
                     <!-- 期間限定專用(JS) -->
                     <a class="JSLowToHeight" style="display:none">價位由低至高</a>
                 </li>
@@ -115,7 +115,7 @@
                     <!-- API共用 -->
                     <a class="HeightToLow" style="display:none">價位由高至低</a>
                     <!-- 期間限定專用 -->
-                    <a class="JSHeightToLow" style="display:none">價位由低至高</a>
+                    <a class="JSHeightToLow" style="display:none">價位由高至低</a>
                 </li>
             </ul>
             <div class="commodityTitle">
@@ -160,12 +160,12 @@
 
     <!-- 載入ＪＳ& API -->
 
-    <script src="./js/API.js?v=050104"></script>
+    <script src="./js/API.js?v=050225"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050104"></script>
+    <script src="./js/loginMember.js?v=050225"></script>
     <!-- 產品選單 -->
     <!-- <script src="/js/searchContent.js"></script> -->
-    <script src="./js/searchAF.js?v=050104"></script>
+    <script src="./js/searchAF.js?v=050225"></script>
 
 
 
