--- a/sp2Pay.html
+++ b/sp2Pay.html
@@ -54,7 +54,7 @@
             <div class="storePayBtn" id="storePayBtnId">
                 門市取貨付款
             </div>
-            <div class="linePayBtn" id="linePayBtnId">
+            <div class="linePayBtn" id="linePayBtnId" style="display: none;">
                 LINE PAY付款
             </div>
 
@@ -85,11 +85,11 @@
 
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050104"></script>
+    <script src="./js/API.js?v=050225"></script>
 
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050104"></script>
-    <script src="./js/sp2Pay.js?v=050104"></script>
+    <script src="./js/loginMember.js?v=050225"></script>
+    <script src="./js/sp2Pay.js?v=050225"></script>
 </body>
 
 </html>
