--- a/sp3LineDelivery.html
+++ b/sp3LineDelivery.html
@@ -72,7 +72,7 @@
 
         </div>
 
-        <div class="nextBtn"  align="right" id="nextBtnLineSp3Id">
+        <div class="nextBtn" id="nextBtnLineSp3Id">
             <span>下一步</span>
         </div>
     </div>
@@ -100,11 +100,11 @@
 
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050104"></script>
+    <script src="./js/API.js?v=050225"></script>
 
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050104"></script>
-    <script src="./js/sp3Linedelivery.js?v=050104"></script>
+    <script src="./js/loginMember.js?v=050225"></script>
+    <script src="./js/sp3Linedelivery.js?v=050225"></script>
 </body>
 
 </html>
