--- a/sp3StoreDelivery.html
+++ b/sp3StoreDelivery.html
@@ -79,7 +79,7 @@
 
 
 
-        <div class="nextBtn"  align="right" id="nextBtnSDsp3Id">
+        <div class="nextBtn" id="nextBtnSDsp3Id">
             <span>下一步</span>
         </div>
     </div>
@@ -107,10 +107,10 @@
 
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050104"></script>
+    <script src="./js/API.js?v=050225"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050104"></script>
-    <script src="./js/sp3Storedelivery.js?v=050104"></script>
+    <script src="./js/loginMember.js?v=050225"></script>
+    <script src="./js/sp3Storedelivery.js?v=050225"></script>
 </body>
 
 </html>
