--- a/Xsp5Cart.html
+++ b/Xsp5Cart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shoppingCart1</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?v=050203">
 </head>
 
 <body>
@@ -96,17 +96,18 @@
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050225"></script>
+    <script src="./js/API.js?v=050238"></script>
 
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050225"></script>
-    <script src="./js/sp5Cart.js?v=050225"></script>
+    <script src="./js/loginMember.js?v=050238"></script>
+    <script src="./js/sp5Cart.js?v=050241"></script>
     <script>
         window.onbeforeunload = function (e) {
             var e = window.event || e;
             e.returnValue = ("準備要清除 orderId囉 ");
             localStorage.removeItem("OrderDetails");
             localStorage.removeItem("orderId");
+            localStorage.removeItem("payment");
         }
     </script>
 </body>
