--- a/signUp.html
+++ b/signUp.html
@@ -63,7 +63,7 @@
 
 
         </ul>
-        <div class="signUpBtn">確認註冊</div>
+        <div class="signUpBtn" id="lineSign">確認註冊</div>
         <!-- <div class="signUpBtn lineLogin" id="lineSign">LINE綁定會員</div> -->
     </div>
 
@@ -93,10 +93,10 @@
 
     <!-- 載入ＪＳ -->
 
-    <script src="./js/API.js?v=050225"></script>
-    <script src="./js/signUp.js?v=050225"></script>
+    <script src="./js/API.js?v=050242"></script>
+    <script src="./js/signUp.js?v=050242"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050225"></script>
+    <script src="./js/loginMember.js?v=050242"></script>
 </body>
 
 </html>
