--- a/sp3StoreDelivery.html
+++ b/sp3StoreDelivery.html
@@ -67,21 +67,11 @@
                     </li> -->
 
             </ul>
-
-
-
+            <div class="nextBtn" id="nextBtnLineSp3Id">
+                <span>下一步</span>
+            </div>
         </div>
 
-
-
-
-
-
-
-
-        <div class="nextBtn" id="nextBtnSDsp3Id">
-            <span>下一步</span>
-        </div>
     </div>
 
 
