--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="setInFrame dpSpaceBetween">
             <h1 class="vacationAromaLogo">
-                <a href="./index.html"><img src="./img/logoB.png" alt=""></a>
+                <a href="./index.html"><img src="../img/logoB.png" alt=""></a>
             </h1>
 
             <ul class="loginMember">
@@ -55,7 +55,7 @@
 
         <div class="brandLogo">
             <span>Welcome to </span>
-            <img src="./img/logoText.png" alt="">
+            <img src="../img/logoText.png" alt="">
         </div>
 
         <div class="brandContent">
@@ -67,19 +67,19 @@
             <p>也許我們不能每天幫你泡一壺美好的心情，但我們可以將你想要的假期帶領給你。</p>
 
             <div class="brandContentImg">
-                <img src="./img/signature.png" alt="">
+                <img src="../img/signature.png" alt="">
             </div>
         </div>
 
         <div class="brandImg">
-            <img src="./img/素材/20170502171200.jpg" alt="">
+            <img src="../img/about-pexels-burst-374885.jpeg" alt="">
         </div>
 
     </div>
 
     <!-- 商品區 -->
     <div class="commodityTitle setInFrame">
-        <h3><img src="./img/products.png" alt=""></h3>
+        <h3><img src="../img/products.png" alt=""></h3>
 
         <ul class="commodity" id="commodityTitleId">
             <!-- <li class="commodityLiList">
@@ -106,12 +106,12 @@
                 <img src="/img/素材/yellow-brubon-1548766_1280.jpg" alt="#">
                 <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
                 <span class="commodityPrice">NT.1490</span>
-            </li>
+            </li>-->
             <li>
-                <img src="/img/素材/da-lat-3059522_1280.jpg" alt="#">
+                <img src="../img/Coffee-Pouch-1.jpg" alt="#">
                 <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
                 <span class="commodityPrice">NT.1490</span>
-            </li> -->
+            </li> 
         </ul>
     </div>
 
@@ -139,7 +139,7 @@
 
     <!-- 載入ＪＳ -->
     <script src="./js/API.js?v=050238"></script>
-    <script src="./js/index.js?v=050238"></script>
+    <!-- <script src="./js/index.js?v=050238"></script> -->
     <!-- 判斷登入 -->
     <script src="./js/loginMember.js?v=050238"></script>
 </body>
