--- a/sp2Pay.html
+++ b/sp2Pay.html
@@ -54,13 +54,9 @@
             <div class="storePayBtn" id="storePayBtnId">
                 門市取貨付款
             </div>
-            <div class="linePayBtn" id="linePayBtnId" style="display: none;">
+            <div class="linePayBtn" id="linePayBtnId"  style="display: none">
                 LINE PAY付款
             </div>
-
-            <!-- <div class="nextBtn">
-                <span>下一步</span>
-            </div> -->
         </div>
     </div>
 
