--- a/commodityPage.html
+++ b/commodityPage.html
@@ -8,7 +8,7 @@
     <title>commodityPage</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
     <style>
         ul {
             list-style-type: none;
@@ -194,13 +194,13 @@
 
     <!-- 載入ＪＳ -->
     <!-- 載入ＡＰＩ -->
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
     <!-- 商品渲染 -->
 
-    <script src="./js/commodityPage.js?v=050238"></script>
-    <script src="./js/aaaaa.js?v=050238"></script>
+    <script src="./js/commodityPage.js?b=17050301"></script>
+    <script src="./js/aaaaa.js?b=17050301"></script>
 
 </body>
 
