--- a/memberPage.html
+++ b/memberPage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>memberPage</title>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.js'
         integrity='sha512-Kg0CewqPNO/ziOJuCq5eyl3P/V6OLz/Lb1I2m+yKS3lHZcGVFN/KOew18rWP+kTsL7haYdaqGjwHQCZrN0heLQ=='
         crossorigin='anonymous'></script>
@@ -115,10 +115,10 @@
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
-    <script src="./js/memberPage.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/memberPage.js?b=17050302"></script>
 
 </body>
 
