--- a/registerSuccess.html
+++ b/registerSuccess.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registerSuccess</title>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
@@ -65,7 +65,7 @@
 
     <!-- 載入ＪＳ -->
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
 
 </body>
 
