--- a/searchAF.html
+++ b/searchAF.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>searchPage</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
@@ -160,12 +160,12 @@
 
     <!-- 載入ＪＳ& API -->
 
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
     <!-- 產品選單 -->
     <!-- <script src="/js/searchContent.js"></script> -->
-    <script src="./js/searchAF.js?v=050238"></script>
+    <script src="./js/searchAF.js?b=17050301"></script>
 
 
 
