--- a/sp2Pay.html
+++ b/sp2Pay.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shoppingPay</title>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
@@ -54,7 +54,7 @@
             <div class="storePayBtn" id="storePayBtnId">
                 門市取貨付款
             </div>
-            <div class="linePayBtn" id="linePayBtnId"  style="display: none">
+            <div class="linePayBtn" id="linePayBtnId" style="display: none">
                 LINE PAY付款
             </div>
         </div>
@@ -81,11 +81,11 @@
 
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
 
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
-    <script src="./js/sp2Pay.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/sp2Pay.js?b=17050301"></script>
 </body>
 
 </html>
