--- a/sp3LineDelivery.html
+++ b/sp3LineDelivery.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sp3LineDelivery</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
 </head>
 
 <body>
@@ -100,11 +100,11 @@
 
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
 
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
-    <script src="./js/sp3Linedelivery.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/sp3Linedelivery.js?b=17050301"></script>
 </body>
 
 </html>
