--- a/sp3StoreDelivery.html
+++ b/sp3StoreDelivery.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sp3StoreDelivery</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
                     </li> -->
 
             </ul>
-            <div class="nextBtn" id="nextBtnLineSp3Id">
+            <div class="nextBtn" id="nextBtnSDsp3Id">
                 <span>下一步</span>
             </div>
         </div>
@@ -97,10 +97,10 @@
 
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
-    <script src="./js/sp3Storedelivery.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/sp3Storedelivery.js?b=17050301"></script>
 </body>
 
 </html>
