--- a/sp4LineDeliveryCheck.html
+++ b/sp4LineDeliveryCheck.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sp4LineDeliveryCheck</title>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
@@ -96,10 +96,10 @@
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
-    <script src="./js/sp4LineDeliveryCheck.js?v=050238"></script>
+    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/sp4LineDeliveryCheck.js?b=17050301"></script>
 
 </body>
 
