--- a/Xsp5Cart.html
+++ b/Xsp5Cart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shoppingCart5</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/all.css?v=050203">
+    <link rel="stylesheet" href="./css/all.css?b=17050301">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
                 <th>品項價格</th>
             </thead>
 
-            
+
 
 
             <tbody class="cartContentList cartList" id="userCartList">
@@ -108,12 +108,12 @@
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?v=050238"></script>
+    <script src="./js/API.js?b=17050301"></script>
 
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?v=050238"></script>
-    <script src="./js/sp5Cart.js?v=050241"></script>
-    <!-- 好了再打開
+    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/sp5Cart.js?b=17050302"></script>
+    <!-- 好了再打開 -->
     <script>
         window.onbeforeunload = function (e) {
             var e = window.event || e;
@@ -122,7 +122,7 @@
             localStorage.removeItem("orderId");
             localStorage.removeItem("payment");
         }
-    </script> -->
+    </script>
 </body>
 
 </html>
