--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <p>也許我們不能每天幫你泡一壺美好的心情，但我們可以將你想要的假期帶領給你。</p>
 
             <div class="brandContentImg">
-                <img src="./img/signature.png" alt="">
+                <!-- 要放簽名圖 未來再補 -->
+                <!-- <img src="./img/signature.png" alt=""> -->
             </div>
         </div>
 
@@ -82,36 +83,7 @@
         <h3><img src="./img/products.png" alt=""></h3>
 
         <ul class="commodity" id="commodityTitleId">
-            <!-- <li class="commodityLiList">
-                <img src="/img/素材/coffee-1576256_1280.jpg" alt="#">
-                <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
-                <span class="commodityPrice">NT.1490</span>
-            </li>
-            <li>
-                <img src="/img/素材/coffee-bean-507411_1280.jpg" alt="#">
-                <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
-                <span class="commodityPrice">NT.1490</span>
-            </li>
-            <li>
-                <img src="/img/素材/coffee-747606_1280.jpg" alt="#">
-                <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
-                <span class="commodityPrice">NT.1490</span>
-            </li>
-            <li>
-                <img src="/img/素材/landscape-2472344_1280.jpg" alt="#">
-                <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
-                <span class="commodityPrice">NT.1490</span>
-            </li>
-            <li>
-                <img src="/img/素材/yellow-brubon-1548766_1280.jpg" alt="#">
-                <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
-                <span class="commodityPrice">NT.1490</span>
-            </li>
-            <li>
-                <img src="/img/素材/da-lat-3059522_1280.jpg" alt="#">
-                <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
-                <span class="commodityPrice">NT.1490</span>
-            </li> -->
+            <!-- 商品要渲染在這 -->
         </ul>
     </div>
 
@@ -131,7 +103,9 @@
             <li>門市地址 高雄市鹽埕區假期一路3F</li>
 
         </ul>
-        <div class="mapkit">
+        
+        <div class="mapKit">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14733.294170546787!2d120.300311!3d22.6043902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9f297a86cf40dfb!2z6auY6ZuE6Luf6auU56eR5oqA5ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1620052976128!5m2!1szh-TW!2stw" width="512" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
 
     </div>
