--- a/searchAF.html
+++ b/searchAF.html
@@ -102,7 +102,7 @@
         <!-- 商品介紹 開始 -->
         <div class="searchContent">
             <div class="commodityBanner">
-                <img src="./img/素材/african-3385074.jpg" alt="">
+                <img src="./img/pexels-photo-374757.jpeg" alt=>
             </div>
             <ul class="searchSort">
                 <li class="sortBtn">
